overflow slider bug fix

--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body
 {
     background: rgb(212, 212, 212);
     
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+
+    overflow-y: scroll;
 }
 
 #separator
